<resources>
    <string name="app_name">ScopeText</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_new_contact">Add Contact</string>
    <string name="new_contact_header">New Contact</string>
    <string name="scope_text_header">Name</string>
    <string name="contact_header">Contact</string>
    <string name="message_header">Message</string>
    <string name="response_header">Response</string>
    <string name="use_header">Use</string>
    <string name="search_contact_text">Contact Name: </string>
    <string name="search_contact_text_hint">Search Contact Name</string>
    <string name="new_contact">NEW_CONTACT</string>
    <string name="contact_image">Contacts Icon</string>
    <string name="action_add_scopetext_str">Add ScopeText</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete_scopetext_str">Delete ScopeText</string>
</resources>
