<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_contact_fragment_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_contact_header"
            android:textSize="@dimen/header_text_size"
            android:textColor="@color/colorTitle"
            android:background="@color/colorPrimary"
            android:gravity="center"/>

        <TextView
            android:id="@+id/search_contact_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_height"
            android:text="@string/search_contact_text"
            android:textSize="@dimen/body_text_size"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_height"
            android:imeOptions="actionSearch"
            android:gravity="center"
            android:hint="@string/search_contact_text_hint" />

</LinearLayout>
