<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <Button
        android:id="@+id/AddButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/form_height"
        android:textSize="@dimen/header_text_size"
        android:text="Add ScopeText"/>
    <Button
        android:id="@+id/RemoveButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/form_height"
        android:textSize="@dimen/header_text_size"
        android:text="Remove ScopeText"/>
    <LinearLayout
        style="@style/AppTheme.TitleText"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/AppTheme.ScopeTextHeader"
            android:text="@string/scope_text_header"/>

        <TextView
            style="@style/AppTheme.ScopeTextHeader"
            android:text="@string/contact_header"/>
        <TextView
            style="@style/AppTheme.TitleText"
            android:text="@string/use_header"
            android:layout_weight=".20"/>
    </LinearLayout>
    <ListView
        android:id="@+id/scopetext_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>
</LinearLayout>